[package]
name = "leptonic-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptonic = "0.2.0"
leptos = { version = "0.4.10", features = ["csr"] }

[build-dependencies]
leptonic-theme = "0.2.0"
leptos-tiptap-build = "0.2.3"
